# fashion-knowledge-graph

./: .env.template  .gitattributes  .gitignore  BLOG_POST.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  README_REFACTORED.md  Readme.md  env.template  pyproject.toml  requirements.txt  test_vertex.py
app/: main.py
dataset/polyvore_outfits/: polyvore_item_metadata.json  polyvore_outfit_titles.json
docs/: API.md  DATASET_MANAGEMENT.md  DEPLOYMENT.md
output/data/: catalog.csv  catalog2.csv  catalog3.csv  catalog4_celebrity.csv  catalog5_celebrity.csv  catalog6_macy.csv  catalog7_celebrity.csv  catalog8_gq.csv  catalog_combined.csv  social_media_images.txt
scripts/: setup_pinecone.py
src/config/: settings.py
src/database/: graph_database.py  vector_database.py
src/engine/: data_preprocessing.py  image_processor.py  process_catalog.py  process_social_media_images.py
src/inference/: product_attributes.py  recommender.py  style_identifier.py
src/models/: attribute_extraction_model.py  embedding_model.py  model_manager.py  segmentation_model.py
src/preprocessing/: data_preprocessing.py  graph_database.py  image_processor.py  process_catalog.py  vector_database.py
src/utils/: models.py  prompts.py  tools.py
